// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin built-in scalars should support all built-in scalars (String, Int, Boolean, Float, ID) 1`] = `
"type MockUserType = {
  id: string;
  name: string;
  active: boolean;
  score: number;
  age: number;
};

class MockGetUserQueryBuilder {
  private me: MockUserType = {
    id: "",
    name: "",
    active: false,
    score: 0.0,
    age: 0,
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockUserType): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  id: this.me.id,
                  name: this.me.name,
                  active: this.me.active,
                  score: this.me.score,
                  age: this.me.age,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}

type MockDeleteUserInputType = {
  id: string;
  soft: boolean | null;
};

type DeleteUserUserType = Pick<MockUserType, "id">;

class MockDeleteUserMutationBuilder {
  private input: MockDeleteUserInputType = {
    id: "",
    soft: null,
  };

  private deleteUser: DeleteUserUserType = {
    id: "",
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  forInput(input: MockDeleteUserInputType): this {
    this.input = input;
    return this;
  }

  havingDeleteUser(deleteUser: DeleteUserUserType): this {
    this.deleteUser = deleteUser;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<
    DeleteUserMutationResponse,
    DeleteUserMutationVariables
  > {
    return {
      request: {
        query: DeleteUserMutationDocument,
        variables: {
          input: this.input,
        },
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Mutation",
                deleteUser: {
                  __typename: "User",
                  id: this.deleteUser.id,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin fragment builder composition should allow query builders to compose fragment builders 1`] = `
"class MockUserSummaryFragmentBuilder {
  private name: string = "";

  private email: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }
  havingEmail(email: string): this {
    this.email = email;
    return this;
  }

  build() {
    return {
      name: this.name,
      email: this.email,
    } as const;
  }
}

type MockUserType = {
  name: string;
  email: string;
};

class MockGetUserQueryBuilder {
  private me: MockUserSummaryFragmentBuilder =
    new MockUserSummaryFragmentBuilder();

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockUserSummaryFragmentBuilder): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  ...this.me.build(),
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin fragment builder composition should compose direct selections with fragment spreads on the same field 1`] = `
"class MockUserSummaryFragmentBuilder {
  private name: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }

  build() {
    return {
      name: this.name,
    } as const;
  }
}

type MockUserType = {
  name: string;
  email: string;
};

class MockGetUserMeSelectionBuilder {
  private name: string = "";
  private email: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }
  havingEmail(email: string): this {
    this.email = email;
    return this;
  }

  build() {
    return {
      name: this.name,
      email: this.email,
    } as const;
  }
}

class MockGetUserQueryBuilder {
  private me: MockGetUserMeSelectionBuilder =
    new MockGetUserMeSelectionBuilder();

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockGetUserMeSelectionBuilder): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  ...this.me.build(),
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin fragment builder composition should compose multiple fragment spreads on the same field into a single builder 1`] = `
"class MockUserSummaryFragmentBuilder {
  private name: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }

  build() {
    return {
      name: this.name,
    } as const;
  }
}

class MockUserContactFragmentBuilder {
  private email: string = "";

  havingEmail(email: string): this {
    this.email = email;
    return this;
  }

  build() {
    return {
      email: this.email,
    } as const;
  }
}

type MockUserType = {
  name: string;
  email: string;
};

class MockGetUserMeSelectionBuilder {
  private name: string = "";
  private email: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }
  havingEmail(email: string): this {
    this.email = email;
    return this;
  }

  build() {
    return {
      name: this.name,
      email: this.email,
    } as const;
  }
}

class MockGetUserQueryBuilder {
  private me: MockGetUserMeSelectionBuilder =
    new MockGetUserMeSelectionBuilder();

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockGetUserMeSelectionBuilder): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  ...this.me.build(),
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin fragment builder lists should allow list fields to accept fragment builder arrays 1`] = `
"class MockUserSummaryFragmentBuilder {
  private name: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }

  build() {
    return {
      name: this.name,
    } as const;
  }
}

type MockUserType = {
  name: string;
};

class MockGetUsersQueryBuilder {
  private users: MockUserSummaryFragmentBuilder[] = [];

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingUsers(users: MockUserSummaryFragmentBuilder[]): this {
    this.users = users;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUsersQueryResponse, GetUsersQueryVariables> {
    return {
      request: {
        query: GetUsersQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                users: this.users.map((item) => ({
                  __typename: "User",
                  ...item.build(),
                })),
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin inline small types should inline small classes (<=3 properties) 1`] = `
"type MockUserType = {
  name: string;
  age: number | null;
  email: string | null;
};

class MockGetUserQueryBuilder {
  private me: MockUserType = {
    name: "",
    age: null,
    email: null,
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockUserType): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  name: this.me.name,
                  age: this.me.age,
                  email: this.me.email,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin mutation builders should generate a builder class for a mutation 1`] = `
"type MockUserType = {
  name: string;
};

type MockCreateUserInputType = {
  name: string;
  age: number | null;
};

class MockCreateUserMutationBuilder {
  private input: MockCreateUserInputType = {
    name: "",
    age: null,
  };

  private createUser: MockUserType = {
    name: "",
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  forInput(input: MockCreateUserInputType): this {
    this.input = input;
    return this;
  }

  havingCreateUser(createUser: MockUserType): this {
    this.createUser = createUser;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<
    CreateUserMutationResponse,
    CreateUserMutationVariables
  > {
    return {
      request: {
        query: CreateUserMutationDocument,
        variables: {
          input: this.input,
        },
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Mutation",
                createUser: {
                  __typename: "User",
                  name: this.createUser.name,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin nullable fragment builder composition should allow nullable fragment-backed singular fields 1`] = `
"class MockUserSummaryFragmentBuilder {
  private name: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }

  build() {
    return {
      name: this.name,
    } as const;
  }
}

type MockUserType = {
  name: string;
};

class MockGetUserQueryBuilder {
  private me: MockUserSummaryFragmentBuilder | null =
    new MockUserSummaryFragmentBuilder();

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockUserSummaryFragmentBuilder | null): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me:
                  this.me == null
                    ? null
                    : {
                        __typename: "User",
                        ...this.me.build(),
                      },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin query builders should generate a builder class for a query 1`] = `
"type MockUserType = {
  name: string;
};

class MockGetUserQueryBuilder {
  private me: MockUserType = {
    name: "",
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockUserType): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  name: this.me.name,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin reused query selections should support reused queries selecting different fields 1`] = `
"type MockUserType = {
  name: string;
  email: string;
};

type GetUserNameUserType = Pick<MockUserType, "name">;

class MockGetUserNameQueryBuilder {
  private me: GetUserNameUserType = {
    name: "",
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: GetUserNameUserType): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserNameQueryResponse, GetUserNameQueryVariables> {
    return {
      request: {
        query: GetUserNameQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  name: this.me.name,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}

type GetUserEmailUserType = Pick<MockUserType, "email">;

class MockGetUserEmailQueryBuilder {
  private me: GetUserEmailUserType = {
    email: "",
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: GetUserEmailUserType): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<
    GetUserEmailQueryResponse,
    GetUserEmailQueryVariables
  > {
    return {
      request: {
        query: GetUserEmailQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  email: this.me.email,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin should disable optimisation when configured 1`] = `
"class MockUserBuilder {
  private name: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }

  build() {
    return {
      __typename: "User",
      name: this.name,
    } as const;
  }
}

class MockGetUserQueryBuilder {
  private me: MockUserBuilder = new MockUserBuilder();

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockUserBuilder): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: this.me.build(),
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin should inline input objects when the configured threshold allows it 1`] = `
"type MockUserType = {
  name: string;
};

type MockCreateUserInputType = {
  name: string;
  age: number | null;
  email: string | null;
};

class MockCreateUserMutationBuilder {
  private input: MockCreateUserInputType = {
    name: "",
    age: null,
    email: null,
  };

  private createUser: MockUserType = {
    name: "",
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  forInput(input: MockCreateUserInputType): this {
    this.input = input;
    return this;
  }

  havingCreateUser(createUser: MockUserType): this {
    this.createUser = createUser;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<
    CreateUserMutationResponse,
    CreateUserMutationVariables
  > {
    return {
      request: {
        query: CreateUserMutationDocument,
        variables: {
          input: this.input,
        },
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Mutation",
                createUser: {
                  __typename: "User",
                  name: this.createUser.name,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin should inline three-field input objects by default 1`] = `
"type MockUserType = {
  name: string;
};

type MockCreateUserInputType = {
  name: string;
  age: number | null;
  email: string | null;
};

class MockCreateUserMutationBuilder {
  private input: MockCreateUserInputType = {
    name: "",
    age: null,
    email: null,
  };

  private createUser: MockUserType = {
    name: "",
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  forInput(input: MockCreateUserInputType): this {
    this.input = input;
    return this;
  }

  havingCreateUser(createUser: MockUserType): this {
    this.createUser = createUser;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<
    CreateUserMutationResponse,
    CreateUserMutationVariables
  > {
    return {
      request: {
        query: CreateUserMutationDocument,
        variables: {
          input: this.input,
        },
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Mutation",
                createUser: {
                  __typename: "User",
                  name: this.createUser.name,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin should render input builders when the configured threshold does not inline them 1`] = `
"type MockUserType = {
  name: string;
};

class MockCreateUserInputBuilder {
  private name: string = "";
  private age: number | null = null;
  private email: string | null = null;

  forName(name: string): this {
    this.name = name;
    return this;
  }
  forAge(age: number | null): this {
    this.age = age;
    return this;
  }
  forEmail(email: string | null): this {
    this.email = email;
    return this;
  }

  build() {
    return {
      name: this.name,
      age: this.age,
      email: this.email,
    } as const;
  }
}

class MockCreateUserMutationBuilder {
  private input: MockCreateUserInputBuilder = new MockCreateUserInputBuilder();

  private createUser: MockUserType = {
    name: "",
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  forInput(input: MockCreateUserInputBuilder): this {
    this.input = input;
    return this;
  }

  havingCreateUser(createUser: MockUserType): this {
    this.createUser = createUser;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<
    CreateUserMutationResponse,
    CreateUserMutationVariables
  > {
    return {
      request: {
        query: CreateUserMutationDocument,
        variables: {
          input: this.input.build(),
        },
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Mutation",
                createUser: {
                  __typename: "User",
                  name: this.createUser.name,
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin standalone fragment builders should generate standalone fragment builders 1`] = `
"class MockUserSummaryFragmentBuilder {
  private name: string = "";

  private email: string = "";

  havingName(name: string): this {
    this.name = name;
    return this;
  }
  havingEmail(email: string): this {
    this.email = email;
    return this;
  }

  build() {
    return {
      name: this.name,
      email: this.email,
    } as const;
  }
}

type MockUserType = {
  name: string;
  email: string;
};
"
`;

exports[`plugin user defined classes should keep full defaults for singular user defined classes 1`] = `
"import { ProfileModel } from "./profileModel";

type MockUserType = {
  profile: ProfileModel;
};

class MockGetUserQueryBuilder {
  private me: MockUserType = {
    profile: {
      bio: "",
      avatar: "",
    },
  };

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingMe(me: MockUserType): this {
    this.me = me;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUserQueryResponse, GetUserQueryVariables> {
    return {
      request: {
        query: GetUserQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                me: {
                  __typename: "User",
                  profile: {
                    __typename: "Profile",
                    bio: this.me.profile.bio,
                  },
                },
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;

exports[`plugin user defined classes should support user defined classes with a named export 1`] = `
"import { MockUserType } from "./userModel";

class MockGetUsersQueryBuilder {
  private users: MockUserType[] = [];

  private responseMode: "success" | "networkError" = "success";
  private networkError: Error | null = null;

  havingUsers(users: MockUserType[]): this {
    this.users = users;
    return this;
  }

  returningNetworkError(error: Error = new Error("Network error")): this {
    this.responseMode = "networkError";
    this.networkError = error;
    return this;
  }

  build(): MockedResponse<GetUsersQueryResponse, GetUsersQueryVariables> {
    return {
      request: {
        query: GetUsersQueryDocument,
      },
      ...(this.responseMode === "networkError"
        ? { error: this.networkError ?? new Error("Network error") }
        : {}),
      ...(this.responseMode === "success"
        ? {
            result: {
              data: {
                __typename: "Query",
                users: this.users.map((item) => ({
                  __typename: "User",
                  name: item.name,
                  age: item.age,
                  deletedAt: item.deletedAt,
                  otherField: item.otherField,
                })),
              },
            },
          }
        : {}),
    } as const;
  }
}
"
`;
